--- a/Examples/minimum_user/src/src_user/IfWrapper/CMakeLists.txt
+++ b/Examples/minimum_user/src/src_user/IfWrapper/CMakeLists.txt
@@ -29,6 +29,7 @@ if(USE_SCI_COM_WINGS AND NOT USE_SILS_MOCKUP)
   add_definitions(-DUSE_SCI_COM_WINGS)
   #target_sources(${PROJECT_NAME} PUBLIC
   list(APPEND C2A_SRCS
+    Sils/sils_sci_if.cpp
     Sils/ccsds_sils_sci_if.cpp
   )
   message("USE SCI_COM_WINGS")
@@ -38,6 +39,7 @@ if(USE_SCI_COM_UART AND NOT USE_SILS_MOCKUP)
   add_definitions(-DUSE_SCI_COM_UART)
   #target_sources(${PROJECT_NAME} PUBLIC
   list(APPEND C2A_SRCS
+    Sils/sils_sci_if.cpp
     Sils/uart_sils_sci_if.cpp
   )
   message("USE SCI_COM_UART")
