add i2c read write function

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ set(C2A_SRCS
   Drivers/Protocol/eb90_frame_for_driver_super.c
   Drivers/Protocol/eb90_packet_for_driver_super.c
   Drivers/Super/driver_super.c
+  IfWrapper/Common/i2c_common.c
   # System/AnomalyLogger/anomaly_logger.c    # deprecated. 使いたい場合は， user 側でビルドターゲットに入れる．
   System/ApplicationManager/app_info.c
   System/ApplicationManager/app_manager.c
