--- a/Examples/2nd_obc_user/src/src_user/IfWrapper/CMakeLists.txt
+++ b/Examples/2nd_obc_user/src/src_user/IfWrapper/CMakeLists.txt
@@ -12,12 +12,14 @@ if(USE_SILS_MOCKUP)
 
   #target_sources(${PROJECT_NAME} PRIVATE
   list(APPEND C2A_SRCS
+    SilsMockup/i2c_sils.c
     SilsMockup/uart_sils.c
     SilsMockup/wdt_sils.c
   )
 else()
   #target_sources(${PROJECT_NAME} PUBLIC
   list(APPEND C2A_SRCS
+    Sils/i2c_sils.cpp  
     Sils/uart_sils.cpp
     Sils/wdt_sils.cpp
   )
