--- a/Examples/minimum_user/src/src_user/IfWrapper/CMakeLists.txt
+++ b/Examples/minimum_user/src/src_user/IfWrapper/CMakeLists.txt
@@ -13,6 +13,7 @@ if(USE_SILS_MOCKUP)
   #target_sources(${PROJECT_NAME} PRIVATE
   list(APPEND C2A_SRCS
     SilsMockup/ccsds_sils.c
+    SilsMockup/i2c_sils.c
     SilsMockup/uart_sils.c
     SilsMockup/wdt_sils.c
   )
@@ -20,6 +21,7 @@ else()
   #target_sources(${PROJECT_NAME} PUBLIC
   list(APPEND C2A_SRCS
     Sils/ccsds_sils.cpp
+    Sils/i2c_sils.cpp
     Sils/uart_sils.cpp
     Sils/wdt_sils.cpp
   )
